			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: time/1 and profile/1,3 to call expand_goal/2.  Time/1 to
    report elapsed time.

  * FIXED: Bug#42: starting a saved state with no known Prolog home.

  * FIXED: do not show FAIL from ports created by dummy choicepoints.
    Alan Baljeu.

  * FIXED: Handling QLF file if their location has changed.  Various
    posters to the mailing list.  Also fixed re-entrance problem in
    the QLF-loader (affecting various XPCE tools) and location sources
    of XPCE objects.  The installation should now be truly position
    independent.

  * FIXED: autoloader bug in multi-threaded code.

  * FIXED: Bug#41: Syntax error with backquoted strings and no
    space after operator =/2.  Holger Kanwischer.


VERSION 5.1.11 (April 1, 2003)
==============================

  * FIXED: Bug#38: optimized prolog arithmetic functions in saved-states.
    Holger Kanwischer.

  * PORT: (Maybe ...) Make compile using SunSoft C-compiler.  Michel Sall. 

  * FIXED: Bug#37 writeq(`hello`) with backquoted_string set to true. 
    Holger Kanwischer

  * ADDED: very first start for multiple engines in single-threaded version
    for benchmarking.

  * FIXED: building on machines that do not support profiling.  Steve Moyle.

  * ENHANCED: Use a mutex per module for functor --> predicate lookup for
    better speed of threads doing meta-calls in different modules.

  * ADDED: compile_predicates/1

  * ADDED: some more statistics on mutex usage

  * ENHANCED: Use mutex per dynamic predicate in the multi-threaded version.
    This reduces contention a lot on the Aleph test.


VERSION 5.1.10#2 (Mar 15, 2003)
===============================

  * FIXED: sort([X], [Y]), X == Y.  Paul Singleton.


VERSION 5.1.10 (Mar 14, 2003)